# RO2_TSP

./: .gitignore  CMakeLists.txt  README.md  release_x64_cplex_ready.props
experimental_results/: test_benders_bc_models_300.csv  test_benders_bc_models_500.csv  test_compact_models_50.csv  test_constructive_heuristics_1000.csv  test_final_vns_2000.csv  test_matheuristics_2opt_1000.csv  test_matheuristics_750.csv  test_metaheuristics_2000.csv  test_soft_fixing_2000_10_minutes_first_timelimit.csv  test_tuning_advbc_300.csv  test_tuning_hard_fix_750.csv  test_tuning_soft_fix_750.csv
experimental_results/graphs_data/: genetic2opt_data_graph.xlsx  genetic_data_graph.xlsx  hard_fixing_data_graph.xlsx  vns_data_graph.xlsx
include/: config.h  convex_hull.h  instance.h  tsp.h  tsp_utilities.h
outputs/berlin52/: basic_model.lp  benders_model.lp  model_GG.lp  model_MTZ_lazy_2_node_SECs.lp  model_MTZ_lazy_u_consistency.lp  model_MTZ_static.lp
outputs/eil51/: basic_model.lp  benders_model.lp  model_GG.lp  model_MTZ_lazy_2_node_SECs.lp  model_MTZ_lazy_u_consistency.lp  model_MTZ_static.lp
results/: Models_results_table.xlsx
src/: connect.c  convex_hull.c  gnuplot_commands.txt  main.c  mip_utilities.c  tsp.c  tsp_utilities.c
